tests/paczka2/big_fuzzy/15067480.err
Error in line 2: A588cq S683 5,0
Error in line 7: A1W S683 21,4
Error in line 8: A1W S535 96,1
Error in line 3: A588cq S995 44,3
Error in line 11: A1W S995 27,7
Error in line 23: A1W S287 87,06
Error in line 13: gpVnz1UB3 S683 177,5
Error in line 24: A1W S287 242,7
Error in line 28: gpVnz1UB3 S535 83,4
Error in line 33: S995 S535 18,1
Error in line 44: gpVnz1UB3 S995 5,1
Error in line 59: A1W S535 233,8
Error in line 61: A1W S683 507,9
Error in line 75: cMCSb7tS S287 15,2
Error in line 79: FuiDQ S683 72,7
Error in line 85: A588cq S535 42,7
Error in line 63: XMmoTE S287 319,0
Error in line 81: FuiDQ S287 8,7
Error in line 93: FuiDQ S535 98,1
Error in line 97: FuiDQ S287 49,9
Error in line 104: XMmoTE S683 76,4
Error in line 99: FuiDQ S683 94,2
Error in line 110: XMmoTE S535 '7,6
Error in line 106: XMmoTE S287 10,2
Error in line 127: gpVnz1UB3 S995 -1,8
Error in line 118: S995 S683 27,5
Error in line 130: A1W S995 36,1
Error in line 134: A588cq S535 9,0
Error in line 145: A1W S287 52,2
Error in line 150: cMCSb7tS S99  48,3
Error in line 161: A1W S995 33,0
Error in line 163: XMmoTE S287 75,8
Error in line 154: cMCSb7tS S995 241,5
Error in line 172: XMmoTE S535 53,9
Error in line 176: FuiDQ S535 74,1
Error in line 183: A588cq S683 25,2
Error in line 186: A588cq S535 67,4
Error in line 192: FuiDQ S535 49,5
Error in line 198: FuiDQ S995 45,8
Error in line 201: FuiDQ S287 38,4
Error in line 211: S995 S287 26,7
Error in line 220: XMmoTE S683 22,96
Error in line 222: FuiDQ S995 3,2
Error in line 239: FuiDQ S683 70,9
Error in line 241: A1W S995 0,2
